feature-templates/nCino/dataset/01yO3G1U-Document Manager/.store/metadata/objects/LLC_BI__Product__c.object
<CustomObject>
    <description>The Product Object contains information about the specific products in the product catalog and details of the association between products and product types.</description>
    <fields>
        <fullName>LLC_BI__Classification__c</fullName>
        <description>Users populate this optional picklist field to configure a Classification for a Product.</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overdraft Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine the default landing page for this loan within the nCino User Interface.</description>
        <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
        <label>Default Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Rate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This optional lookup field references the deposit rate structure for this product.</description>
        <label>Deposit Rate Structure</label>
        <referenceTo>LLC_BI__Deposit_Rate_Structure__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The Administrator populates this optional text field to describe the selected product(s). By default, it is blank.</description>
        <inlineHelpText>Enter a detailed description for the product.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Disable_Id_Document_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox to prevent an ID Document from saving to its placeholder in Document Manager after an ID validates through ID Scan.</description>
        <inlineHelpText>Select this checkbox to prevent an ID Document from saving into Document Manager.</inlineHelpText>
        <label>Disable ID Document Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populate this lookup field to define the Institution to which a product belongs.</description>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Learn_More__c</fullName>
        <description>The Administrator populates this optional text field with a URL to an external resource relevant to the selected product(s). By default, it is blank.</description>
        <inlineHelpText>Provide an external hyperlink where users can learn more about the product(s) they selected.</inlineHelpText>
        <label>Learn More</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_App__c</fullName>
        <description>This field automatically populates via the treasury maintenance configuration. It associates converted treasury services to product-specific maintenance actions. This field corresponds to the unique app name on the route object to control what is displayed to users. Default is null.</description>
        <label>Maintenance App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maintenance_Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Administrators use this lookup field to store the Screen Section that relates to a Product for maintenance.</description>
        <inlineHelpText>Enter the unique identifier for the Screen Section.</inlineHelpText>
        <label>Maintenance Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Products (Maintenance)</relationshipLabel>
        <relationshipName>Products_Maintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Funding_Amount__c</fullName>
        <description>Manually populate this currency field with the maximum amount allowed to fund this product.</description>
        <label>Maximum Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Funding_Amount__c</fullName>
        <description>Manually populate this currency field with the minimum amount required to fund this product.</description>
        <label>Minimum Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Disclosures_Description__c</fullName>
        <description>The user populates this optional field with a description of the other disclosure the account holder(s) will acknowledge receipt of on the signature card.</description>
        <inlineHelpText>Enter a description of the other disclosure the account holder(s) will acknowledge receipt of on the signature card.</inlineHelpText>
        <label>Other Disclosures Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Disclosures_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Administrators populate this optional boolean field to acknowledge receipt of a disclosure other than the disclosures predefined on the signature card. By default, it is false.</description>
        <inlineHelpText>Select this field to acknowledge receipt of a disclosure other than the disclosures predefined on the signature card.</inlineHelpText>
        <label>Other Disclosures Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Feature__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and is manually populated. This field is a lookup used to associate a product feature to the product. A product feature is used to attach attributes to the product.</description>
        <inlineHelpText>After changing this field, go to the nCino Administration tab then run Install Updates and Install Batch Updates if this product is related to existing loans.</inlineHelpText>
        <label>Product Feature</label>
        <referenceTo>LLC_BI__Product_Feature__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Name__c</fullName>
        <description>This field is required. The user manually populates this field. It represents the name of the product line.</description>
        <formula>LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Name__c</fullName>
        <description>This field is required. The user manually populates this field. It represents the name of the product type.</description>
        <formula>LLC_BI__Product_Type__r.Name</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <description>This field is required and is manually populated. This field is a master detail field that is used to associate the product with a product type.</description>
        <label>Product Type</label>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RealEstate_Type__c</fullName>
        <description>This field is no longer in use. Previously, it was used to specify what type of real estate is involved with this product.</description>
        <inlineHelpText>If this product has real estate involved, what type of real estate. Note: If anything besides &quot;None&quot; is checked, then a hidden &quot;Real Estate&quot; checkbox field will be set to true.</inlineHelpText>
        <label>Real Estate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__RealEstate__c</fullName>
        <description>This field is automatically set by LLC_BI__RealEstate_Type__c via a formula. This field is a text (true or false) field that is used to specify whether the product is considered a Real Estate type.</description>
        <formula>IF( ISPICKVAL(LLC_BI__RealEstate_Type__c, &apos;None&apos;), &quot;false&quot;,
IF(ISPICKVAL(LLC_BI__RealEstate_Type__c, &apos;&apos;), &quot;false&quot;, &quot;true&quot;   )
)</formula>
        <inlineHelpText>T/F</inlineHelpText>
        <label>Real Estate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the Screen Section that relates to this Product.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>